--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@ node_modules/
 dist/
 build/
 
-# Environment variables (secrets)
-.env
-.env.local
-.env.development
-.env.production
+# # Environment variables (secrets)
+# .env
+# .env.local
+# .env.development
+# .env.production
 
 # Logs
 logs/
